publiccode.yml fix

--- a/publiccode.yml
+++ b/publiccode.yml
@@ -79,4 +79,4 @@ platforms:
 releaseDate: '2021-12-25'
 softwareType: standalone/other
 url: 'https://github.com/teamdigitale/dati-semantic-frontend'
-logo: assets/Schema_logo.svg
+logo: assets/Schema_thumbnail.svg
