restore API_URL

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_URL=https://ndc-test.apps.cloudpub.testedev.istat.it/api
+API_URL=
 SPARQL_ENDPOINT_URL=http://localhost:8890/sparql
 IMAGE_INLINE_SIZE_LIMIT=0
 INLINE_RUNTIME_CHUNK=false
