--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/user-event": "^13.5.0",
         "@typescript-eslint/eslint-plugin": "^4.5.0",
         "@typescript-eslint/parser": "^4.5.0",
+        "axios": "^1.4.0",
         "babel-loader": "9.1.0",
         "babel-plugin-named-asset-import": "^0.3.8",
         "babel-preset-react-app": "10.0.1",
@@ -60,7 +61,7 @@
         "terser-webpack-plugin": "5.3.6",
         "ts-pnp": "1.2.0",
         "url-loader": "4.1.1",
-        "web-vitals": "^2.1.2"        
+        "web-vitals": "^2.1.2"
     },
     "devDependencies": {
         "@babel/preset-flow": "7.18.6",
