--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "resolve": "1.20.0",
         "resolve-url-loader": "^5.0.0",
         "sass-loader": "^10.0.5",
-        "semver": "7.3.5",
+        "semver": "^7.5.2",
         "style-loader": "2.0.0",
         "stylelint": "14.15.0",
         "stylelint-config-sass-guidelines": "9.0.0",
@@ -60,7 +60,7 @@
         "terser-webpack-plugin": "5.3.6",
         "ts-pnp": "1.2.0",
         "url-loader": "4.1.1",
-        "web-vitals": "^2.1.2"        
+        "web-vitals": "^2.1.2"
     },
     "devDependencies": {
         "@babel/preset-flow": "7.18.6",
@@ -102,6 +102,9 @@
         "webpack-dev-server": "4.11.1",
         "webpack-manifest-plugin": "5.0.0",
         "workbox-webpack-plugin": "6.5.4"
+    },
+    "resolutions": {    
+        "semver": "7.5.3"
     },
     "scripts": {
         "start": "./env.sh && move env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
