--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-API_URL=
-SPARQL_ENDPOINT_URL=http://localhost:8890/sparql
+API_URL=http://localhost:8080
+SPARQL_ENDPOINT_URL=https://virtuoso-test-external-service-ndc-test.apps.cloudpub.testedev.istat.it/sparql
 IMAGE_INLINE_SIZE_LIMIT=0
 INLINE_RUNTIME_CHUNK=false
 NDC_MAINTENANCE_MESSAGE=
