--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@favware/skip-dependency": "1.2.1",
         "@babel/core": "7.20.2",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
@@ -103,7 +104,8 @@
         "workbox-webpack-plugin": "6.5.4"
     },
     "resolutions": {
-        "semver": "7.5.3"
+        "semver": "7.5.3",
+        "progressbar.js": "https://registry.npmjs.org/package-that-cannot-be-installed/-/package-that-cannot-be-installed-0.0.0.tgz"
     },
     "scripts": {
         "start": "./env.sh && move env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
