--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "babel-plugin-named-asset-import": "^0.3.8",
         "babel-preset-react-app": "10.0.1",
         "bfj": "^7.0.2",
+        "@favware/skip-dependency": "^1.2.1",
         "bootstrap-italia": "^2.6.1",
         "camelcase": "^6.2.1",
         "case-sensitive-paths-webpack-plugin": "2.4.0",
@@ -103,7 +104,8 @@
         "workbox-webpack-plugin": "6.5.4"
     },
     "resolutions": {
-        "semver": "7.5.3"
+        "semver": "7.5.3",
+        "progressbar": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz"
     },
     "scripts": {
         "start": "./env.sh && move env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
