--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     },
     "resolutions": {
         "semver": "7.5.3",
-        "progressbar": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz"
+        "progressbar.js": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz"
     },
     "scripts": {
         "start": "./env.sh && move env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
