--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
     },
     "resolutions": {
         "semver": "7.5.3",
-        "postcss": "8.4.31"
+        "postcss": "8.4.31",
+        "@babel/traverse": "7.23.2"
     },
     "scripts": {
         "start": "./env.sh && move env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
