--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
   listen 8080;
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-Content-Type-Options nosniff;
-  add_header Content-Security-Policy "default-src 'none'; script-src 'self'; script-src-elem 'self' *.istat.it 'unsafe-inline'; style-src 'self' *.istat.it 'unsafe-inline'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src *; manifest-src 'self';" always;
+  add_header Content-Security-Policy "default-src 'self'; script-src 'self'; script-src-elem 'self' *.istat.it 'unsafe-inline'; style-src 'self' *.istat.it 'unsafe-inline'; base-uri 'self'; img-src 'self' data: https; font-src 'self' data:; connect-src *; manifest-src 'self';" always;
   add_header X-Robots-Tag $x_robots_tag;
   location / {
     root   /etc/nginx/html;
