--- a/package.json
+++ b/package.json
@@ -106,7 +106,8 @@
         "semver": "7.5.3",
         "postcss": "8.4.31",
         "@babel/traverse": "7.23.2",
-        "axios": "^1.6.1"
+        "axios": "^1.6.1",
+        "@adobe/css-tools": "^4.3.2"
     },
     "scripts": {
         "start": "./env.sh && move env-config.js ./public/ && set INLINE_RUNTIME_CHUNK=false && node scripts/start.js",
