--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "10.0.1",
     "bfj": "^7.0.2",
+    "bootstrap-italia": "^2.8.7",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
     "css-loader": "5.2.7",
