--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
-    "axios": "^1.6.7",
+    "axios": "^1.7.4",
     "babel-loader": "9.1.0",
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "10.0.1",
@@ -61,7 +61,8 @@
     "terser-webpack-plugin": "5.3.6",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@babel/preset-flow": "7.18.6",
@@ -93,14 +94,14 @@
     "jest-resolve": "27.4.5",
     "jest-watch-typeahead": "1.0.0",
     "k6": "^0.0.0",
-    "url": "^0.11.3",
     "prettier": "^2.8.0",
     "prop-types": "^15.8.1",
     "react-dev-utils": "12.0.1",
     "swagger-ui-react": "^4.15.5",
+    "url": "^0.11.3",
     "wdio-chromedriver-service": "^8.1.1",
     "webdriverio": "^8.22.1",
-    "webpack": "5.76.0",
+    "webpack": "^5.94.0",
     "webpack-dev-server": "4.11.1",
     "webpack-manifest-plugin": "5.0.0",
     "workbox-webpack-plugin": "6.5.4"
@@ -109,7 +110,8 @@
     "semver": "7.5.3",
     "postcss": "8.4.31",
     "@babel/traverse": "7.23.2",
-    "axios": "^1.6.1",
+    "axios": "^1.7.4",
+    "micromatch": "^4.0.8",
     "@adobe/css-tools": "^4.3.2"
   },
   "scripts": {
